Constructor Assignment of Boolean Object to defaultTableData via Boolean.valueOf() Instead of Creating a New Boolean Object. Likewise for resultTable in actionPerformed() & mouseClicked().